--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 dataArray.forEach((value, index) => {
                     const bar = document.createElement('div');
                     bar.classList.add('bar');
-                    bar.style.height = `${(value / 255) * 100}%`; // Bars now grow upwards
+                    bar.style.height = `${(value / 255) * 100}%`; // Bars now grow upwards from the bottom
                     bar.style.backgroundColor = `rgb(${value}, ${255 - value}, ${value})`;
                     visualizer.appendChild(bar);
                 });
