--- a/index.html
+++ b/index.html
@@ -59,24 +59,6 @@
             margin-left: 10px;
         }
 
-        .visualizer {
-            position: absolute;
-            bottom: 0;
-            height: 100px; /* Adjust height to make it more prominent */
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            margin: 0;
-            padding: 0;
-        }
-
-        .bar {
-            width: 4%;
-            height: 0%; /* Start from 0 height */
-            background: #121212;
-            transition: height 0.1s ease;
-        }
-
         .image-container {
             position: absolute;
             top: 20%;
@@ -129,6 +111,25 @@
         @keyframes rotate {
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
+        }
+
+        .visualizer {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            height: 100px; /* Adjust height to make it more prominent */
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            margin: 0;
+            padding: 0;
+        }
+
+        .bar {
+            width: 4%;
+            height: 0%; /* Start from 0 height */
+            background: #121212;
+            transition: height 0.1s ease;
         }
 
         .retro {
